--- a/Monsters_page.razor
+++ b/Monsters_page.razor
@@ -13,11 +13,11 @@
 
 	if(d2 == null)
 	{
-		<div style="background-image: url('@($"https://www.dnd5eapi.co/api/images/monsters/{inputText}.png")'); background-size: cover;
+		<div style="background-image: url('@($"https://www.dnd5eapi.co/api/images/monsters/{inputText}.png")'); background-size: cover;></div>
 	}
 	else
 	{
-		<div style="background-image: url('@($"DND_Background.jpg")'); background-size: cover;
+		<div style="background-image: url('@($"DND_Background.jpg")'); background-size: cover;></div>
 	}
 
 }
