--- a/Monsters_page.razor
+++ b/Monsters_page.razor
@@ -17,7 +17,7 @@
 	}
 	else
 	{
-		<div style="background-image: url('("DND_Background.jpg")'); background-size: cover; width: 300px; height: 300px;"></div>
+		<div style="background-image: url('DND_Background.jpg'); background-size: cover; width: 300px; height: 300px;"></div>
 	}
 }
 
