--- a/_Imports.razor
+++ b/_Imports.razor
@@ -6,5 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using BlazorMicah
-@using BlazorMicah.Shared
+@using Blazor_Practive_1
+@using Blazor_Practive_1.Shared
